objects/Travel_Schedule__c.object
<CustomObject>
    <description>The Administrator will encode the Travel Schedule</description>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipLabel>Travel Schedules</relationshipLabel>
        <relationshipName>Travel_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus_ID__c</fullName>
        <label>Bus ID</label>
        <referenceTo>Bus__c</referenceTo>
        <relationshipLabel>Travel Schedules</relationshipLabel>
        <relationshipName>Travel_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <description>Refers to the time of Departure</description>
        <inlineHelpText>Time of Departure</inlineHelpText>
        <label>Departure Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <description>Point where is a bus route</description>
        <inlineHelpText>Point where is bus route</inlineHelpText>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hanumangarh</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Karanpur</fullName>
                </value>
                <value>
                    <fullName>Raisinghnager</fullName>
                </value>
                <value>
                    <fullName>Rawatsar</fullName>
                </value>
                <value>
                    <fullName>Sardarshahar</fullName>
                </value>
                <value>
                    <fullName>Sikar</fullName>
                </value>
                <value>
                    <fullName>Sri Ganganagar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Driver_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver ID</label>
        <referenceTo>Driver__c</referenceTo>
        <relationshipLabel>Travel Schedules</relationshipLabel>
        <relationshipName>Travel_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Arrival_Time__c</fullName>
        <description>The time the bus will arrive in its destination</description>
        <inlineHelpText>Time the bus will arrive in its destination</inlineHelpText>
        <label>Estimated Arrival Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Fare_Amount__c</fullName>
        <description>The fare amount to be paid by the Commuter</description>
        <inlineHelpText>Fare Amount paid by Commuter</inlineHelpText>
        <label>Fare Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Important notes on the Travel</description>
        <inlineHelpText>Important notes on the Travel</inlineHelpText>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <description>Refers to the Date of Travel</description>
        <inlineHelpText>Date of Travel</inlineHelpText>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starting_Point__c</fullName>
        <description>The Point of origin of the Bus.</description>
        <inlineHelpText>Origin of the Bus</inlineHelpText>
        <label>Starting Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hanumangarh</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Karanpur</fullName>
                </value>
                <value>
                    <fullName>Raisinghnager</fullName>
                </value>
                <value>
                    <fullName>Rawatsar</fullName>
                </value>
                <value>
                    <fullName>Sardarshahar</fullName>
                </value>
                <value>
                    <fullName>Sikar</fullName>
                </value>
                <value>
                    <fullName>Sri Ganganagar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Travel Schedule</label>
    <nameField>
        <displayFormat>A - {0000}</displayFormat>
        <label>Travel Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>